--- a/survey/index.html
+++ b/survey/index.html
@@ -247,7 +247,7 @@
       </span>
       <p> 
     <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/document/10945649" target="_blank" rel="noopener">TPAMI'25</a>
-    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/cschenxiang/HQ-RAIN" target="_blank" rel="noopener">Code</a>
+    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/cschenxiang/HQ-RAIN" target="_blank" rel="noopener">HQ-RAIN Code</a>
       </p>
     </div>
 </div> 
