--- a/survey/index.html
+++ b/survey/index.html
@@ -280,7 +280,8 @@
         Channel Consistency Prior and Self-Reconstruction Strategy Based Unsupervised Image Deraining
       </span>
       <p> 
-    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2503.18703" target="_blank" rel="noopener">CVPR'25</a>
+        <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2503.18703" target="_blank" rel="noopener">CVPR'25</a>
+        <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/GuangluDong0728/CSUD-Unsupervised-Deraining-CVPR2025" target="_blank" rel="noopener">CSUD Code</a>
       </p>
     </div>
 </div> 
