--- a/survey/index.html
+++ b/survey/index.html
@@ -286,6 +286,18 @@
     </div>
 </div> 
 
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2025">
+    <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+      <span class="article-metadata li-cite-author">
+      <span >
+        DeRainGS: Gaussian Splatting for Enhanced Scene Reconstruction in Rainy Environments
+      </span>
+      <p> 
+        <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2408.11540" target="_blank" rel="noopener">AAAI'25</a>
+      </p>
+    </div>
+</div> 
 
         
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2024">
