--- a/survey/index.html
+++ b/survey/index.html
@@ -298,6 +298,19 @@
       </p>
     </div>
 </div> 
+        
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2024">
+    <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+      <span class="article-metadata li-cite-author">
+      <span >
+        Unsupervised Deraining: Where Asymmetric Contrastive Learning Meets Self-Similarity
+      </span>
+      <p> 
+    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/abstract/document/10269093" target="_blank" rel="noopener">TPAMI'24</a>
+      </p>
+    </div>
+</div> 
 
         
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2024">
@@ -427,6 +440,19 @@
 <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/cschenxiang/NeRD-Rain" target="_blank" rel="noopener">NeRD-Rain Code</a>
   </p>
  </div>
+</div> 
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2023">
+    <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+      <span class="article-metadata li-cite-author">
+      <span >
+        Wavelet Approximation-Aware Residual Network for Single Image Deraining
+      </span>
+      <p> 
+    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/document/10227544" target="_blank" rel="noopener">TPAMI'23</a>
+      </p>
+    </div>
 </div> 
 
 <!--
